--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     container_name: postgresdb
     image: postgres:latest
     restart: unless-stopped
-
+    ports:
+      - "7432:5432"
     volumes:
       - ./data/pg:/var/lib/postgresql/data
     environment:
